# landscape-mini-client

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
src/landscape_mini_client/: __main__.py  main.py  messages.py  storage.py
src/landscape_mini_client/commands/: ping.py  pingspam.py  register.py  send_message.py  storage.py
src/landscape_mini_client/commands/tests/: test_register.py
src/landscape_mini_client/tests/: test_messages.py  test_storage.py
src/landscape_mini_client/util/: bpickle.py
