[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "landscape_mini_client"
version = "0.0.1"
authors = [{name="Mitch Burton", email="mitch.burton@canonical.com"}]
description = "A mini version of Landscape Client"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests ~= 2.25",
]

[project.urls]
"Homepage" = "https://github.com/perfect5th/landscape-mini-client"
"Bug Tracker" = "https://github.com/perfect5th/landscape-mini-client/issues"

[project.scripts]
landscape-mini-client = "src.landscape_mini_client.main:main"
